New about section Saturday

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -62,6 +62,7 @@
 <h3>The present</h3>
 <p>I am a statistician working for the Government of South Australia. I started this job in 2017. I provide analyses of administrative data for internal government communications and public facing data visualisations.</p>
 <p>I also provide advice to government on the use of quantitative information including the construction of automated decision making systems. My work in this field led me to a <a href="https://www.churchilltrust.com.au/fellows/detail/4329/Owen+Churches">Churchill Fellowship</a> in 2019 to look at ethical and just regulation of artificial intelligences.</p>
+<p>I still collaborate with the <a href="http://www.cain.science/">CAIN Laboratory</a> at UniSA. The beautiful knitted neurons on the landing page of this blog were made by the staff and students there.</p>
 </div>
 </div>
 <div class="footnotes">
