--- a/public/about/index.html
+++ b/public/about/index.html
@@ -45,7 +45,7 @@
 <h2>Long version</h2>
 <div id="the-past" class="section level3">
 <h3>The past</h3>
-<p>I completed my PhD at the <a href="https://www.autismresearchcentre.com/people_Churches">Univeristy of Cambridge</a> in 2011 and untill 2017, I was a neuroscientist. There is a good list of my academic publications <a href="https://scholar.google.com/citations?user=nTXN-X8AAAAJ&amp;hl=en">here</a>. I quite enjoyed a lot about being an academic. I did some lectures where I lead the class in protest against the tyrany of frequentist statistics<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>:</p>
+<p>I completed my PhD at the <a href="https://www.autismresearchcentre.com/people_Churches">Univeristy of Cambridge</a> in 2011 and until 2017, I was a neuroscientist. There is a good list of my academic publications <a href="https://scholar.google.com/citations?user=nTXN-X8AAAAJ&amp;hl=en">here</a>. I quite enjoyed a lot about being an academic. I did some lectures where I lead the class in protest against the tyrany of frequentist statistics<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>:</p>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="//www.youtube.com/embed/2ze-_jA1X94" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
