--- a/content/about.html
+++ b/content/about.html
@@ -17,7 +17,7 @@ title: About me
 <h2>Long version</h2>
 <div id="the-past" class="section level3">
 <h3>The past</h3>
-<p>I completed my PhD at the <a href="https://www.autismresearchcentre.com/people_Churches">Univeristy of Cambridge</a> in 2011 and until 2017, I was a neuroscientist. There is a good list of my academic publications <a href="https://scholar.google.com/citations?user=nTXN-X8AAAAJ&amp;hl=en">here</a>. I quite enjoyed a lot about being an academic. I did some lectures where I lead the class in protest against the tyrany of frequentist statistics<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>:</p>
+<p>I completed my PhD at the <a href="https://www.autismresearchcentre.com/people_Churches">Univeristy of Cambridge</a> in 2011 and until 2017, I was a neuroscientist. There is a good list of my academic publications <a href="https://scholar.google.com/citations?user=nTXN-X8AAAAJ&amp;hl=en">here</a>. I quite enjoyed a lot about being an academic. I did some lectures where I lead the class in protest against the tyranny of frequentist statistics<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>:</p>
 {{% youtube "2ze-_jA1X94" %}}
 <p>And I was sometimes joined for lectures by a virtual teaching assistant.</p>
 {{% youtube "jDtSo6nijfI" %}}
@@ -32,6 +32,6 @@ title: About me
 <div class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>With appreciation and appologies to Bob Dylan<a href="#fnref1">↩</a></p></li>
+<li id="fn1"><p>With appreciation and apologies to Bob Dylan<a href="#fnref1">↩</a></p></li>
 </ol>
 </div>
